<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.saylik.iteration.calculateIteration">

    <LinearLayout android:id="@+id/main_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout android:id="@+id/point_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:id="@+id/point"
                android:layout_width="@dimen/activity_width_layout"
                android:layout_height="wrap_content"
                android:text="@string/lbl_points"
                />

            <EditText
                android:id="@+id/enter_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/lbl_enter_points"
                />
        </LinearLayout>

        <LinearLayout android:id="@+id/velocity_block"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView android:id="@+id/velocity"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_velocity"
                />

            <EditText
                android:id="@+id/enter_velocity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/lbl_enter_velocity"
                />
        </LinearLayout>


    </LinearLayout>
    <Button
        android:id="@+id/calculate_iteration"
        android:text="Calculate Iteration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:clickable="true"
        android:layout_below="@+id/main_block"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:onClick="calculateIteration"/>

    <LinearLayout android:id="@+id/show_buffer_block"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">


        <TextView android:id="@+id/iteration_buffer"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_buffer"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textSize="19dp"/>

        <TextView android:id="@+id/show_buffer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="30dp"
            android:textSize="18dp"/>

    </LinearLayout>

</RelativeLayout>
